deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipelinedeployment
  labels:
    app: pipelinedeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelinedeployment
  template:
    metadata:
      labels:
        app: pipelinedeployment
      annotations: 
        date: "+%H:%M:%S %d/%m/%y"
    spec:
      imagePullSecrets:
        - name: "dhubauth"
      containers:
       - name: pipelinedeployment-container
         image: prince162222/pipelinetest:latest
         imagePullPolicy: Always
         ports:
            - name: http
              containerPort: 8085
         readinessProbe:
          tcpSocket:
            port: 8085
          initialDelaySeconds: 5
          periodSeconds: 10
         livenessProbe:
          tcpSocket:
            port: 8085
          initialDelaySeconds: 15
          periodSeconds: 20
