deployment/alb-method-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelineservice
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8085
      targetPort: 8085
  selector:
    app: pipelinedeployment
