deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelineservice
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pipelinedeployment
