deployment/alb-method-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicdingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/target-type: ip
   
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pipelineservice
            port:
              number: 8085
