deployment/nlb-method-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicdingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
   
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pipelineservice
            port:
              number: 8085
